--- a/translations/sk/LC_MESSAGES/messages.po
+++ b/translations/sk/LC_MESSAGES/messages.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2019-01-29 21:10+0100\n"
+"POT-Creation-Date: 2019-01-30 21:14+0100\n"
 "PO-Revision-Date: 2018-11-27 22:00+0200\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language: sk\n"
@@ -1711,6 +1711,18 @@ msgstr "Python vývojár v Anvile"
 msgid "Security Engineer"
 msgstr "Bezpečnostný inžinier"
 
+#: templates/index.html:415
+msgid "Tech Lead at Kiwi.com"
+msgstr "Vedúci technológií v kiwi.com"
+
+#: templates/index.html:425 templates/speakers.html:401
+msgid "Cloud technology enthusiast"
+msgstr "Nadšenec cloudových technológií"
+
+#: templates/index.html:435 templates/speakers.html:455
+msgid "Senior Software Architect"
+msgstr "Senior softvérový architekt"
+
 #: templates/job-fair.html:8
 msgid "Job fair"
 msgstr "Job fair"
@@ -2321,7 +2333,7 @@ msgstr "Konferenčná Večera "
 
 #: templates/speakers.html:17
 msgid "Speakers you can meet at PyCon SK 2019."
-msgstr ""
+msgstr "Rečníci, ktorých môžete stretnúť na PyCone SK 2019"
 
 #: templates/speakers.html:40
 msgid ""
@@ -2331,11 +2343,11 @@ msgid ""
 "website for large audiences. He always had large affinity of working with"
 " data and trying to help teams scale their code and data."
 msgstr ""
-"Honza je Python developer v Elasticu, spoločnosti za Elasticsearchom a "
-"ďalšími open-sourcovými produktami, kde sa venuje údržbe pythonských "
-"knižníc. Predtým bol súčasťou Whiskey Media, kde pomocou Djanga vytváral "
-"obsahovú webstránku pre veľké publikum. Vždy veľmi inklinoval k práci s "
-"dátami a pomáhaniu tímom rozširovať ich kód a dáta."
+"Honza je Python inžinier v Elasticu, spoločnosti za Elasticsearchom "
+"a ďalšími open sourcovými produktami, kde spravuje pythonské knižnice. "
+"Predtým bol súčasťou Whiskey Media, používal Django na tvorbu web stránok "
+"pre väčšie publikum. Vždy ho priťahovala práca s dátami a snaha pomôcť "
+"tímom škálovať ich kód a dáta."
 
 #: templates/speakers.html:44
 msgid "So you want to be an Engineer?"
@@ -2373,10 +2385,10 @@ msgid ""
 "contributor to the Chromium project, where she developed open-source "
 "libraries and tools for over four years."
 msgstr ""
-"Helen Li je senior software developerka z Google AI Genomics. Bakalársky "
-"titul z Informačných technológií získala na MIT. Predtým, ako pracovala "
-"na Nucleuse, bola aktívnou prispievateľkou do projektu Chromium, kde "
-"počas štyroch rokov vyvíjala open-sourcové knižnice a nástroje."
+"Helen Li je senior softvér inžinerka v Google AI Genomics. Promovala na "
+"Massachusetts Institute of Technology, pred prácou na Nucleuse, bola "
+"aktívnou prispievateľkou k projektu Chromium, kde viac ako štyri roky "
+"vyvíjala open sourcové knižnice a nástroje."
 
 #: templates/speakers.html:76
 msgid "Nucleus: an open-source library for genomics data and machine learning"
@@ -2402,6 +2414,11 @@ msgid ""
 "ubuntuusers.de community support platform where he discovered Python and "
 "Django in 2010."
 msgstr ""
+"Markus Holtermann pracuje v Crate.io ako inžinier pre back-end a "
+"infraštruktúru. Bol Django core prispievateľom od začiatku roku 2015. Je"
+" členom Django bezpečnostného tímu a tiež organizátorom a poradcom "
+"pre konferencie DjangoCon. Markus viedol projekt ubuntuusers.de - nemeckej "
+"komunitnej platformy, kde v roku 2010 objavil Python a Django."
 
 #: templates/speakers.html:145
 msgid "Less Obvious Things To Do With Django's ORM."
@@ -2453,7 +2470,7 @@ msgstr ""
 "Meredydd programoval od starých dobrých čias QBasicu a Delphi, keď bolo "
 "ešte jednoduché začať tvoriť softvér. Vytvoril Anvil, aby sa tieto časy "
 "vrátili. Meredydd pracoval v startupoch od telkomu po hudbu a má PhD z "
-"Cambridge o využiteľnosti programovania."
+"Cambridge o využiteľnosti programovania. "
 
 #: templates/speakers.html:244
 msgid "Anvil: Full-stack Web Apps with Nothing but Python"
@@ -2479,9 +2496,9 @@ msgid ""
 "everything into Python, which is why he works for Anvil."
 msgstr ""
 "Shaun začal programovať simulovaním horiacej fúznej plazmy v najväčšom "
-"laserovom systéme na svete. Zahľadel sa do Pythonu ako nástroja na "
-"analýzu dát a odvtedy už nepozeral po žiadnom inom. Teraz chce všetko "
-"zmeniť na Python, preto pracuje v Anvile."
+"laserovom systéme na svete. Zahľadel sa do Pythonu ako nástroja na analýzu"
+" dát a odvtedy už nepozeral po žiadnom inom. Teraz chce všetko zmeniť na "
+"Python, preto pracuje v Anvile."
 
 #: templates/speakers.html:287
 msgid "Anvil - Build a full-stack web app using nothing but Python"
@@ -2520,10 +2537,10 @@ msgid ""
 "devoted Python user and evangelist. Interested in operating systems, "
 "security, networking and almost anything interesting."
 msgstr ""
-"Adam je momentálne bezpečnostný inžinier, ale ako SRE/bezpečnostný/DevOps"
-" inžinier pracuje už dlhý čas. Miluje UNIX, je oddaným používateľom a "
-"evanjelistom Pythonu. Zaujíma sa o operačné systémy, bezpečnosť, siete a "
-"vlastne čokoľvek zaujímavé."
+"Adam je momentálne bezpečnostný inžinier, ale ako SRE/bezpečnostný/DevOps "
+"inžinier pracuje už dlhý čas. Miluje UNIX, je oddaným používateľom a "
+"evanjelistom Pythonu. Zaujíma sa o operačné systémy, bezpečnosť, siete "
+"a vlastne čokoľvek zaujímavé."
 
 #: templates/speakers.html:334
 msgid "Be a good colleague and help your Security Engineer!"
@@ -2536,6 +2553,135 @@ msgid ""
 "common security vulnerabilities and integrate these checks into their CI "
 "systems. Following these guidelines, you will make your Security "
 "Engineers happy and your code more secure."
+msgstr ""
+
+#: templates/speakers.html:358
+msgid "Tech Lead at kiwi.com"
+msgstr "Vedúci technológií v kiwi.com"
+
+#: templates/speakers.html:367
+msgid ""
+"Dmitry is a Tech Lead at kiwi.com in Prague. Started with Python in 2010 "
+"as a hobby during the university, he switched to a fulltime developer job"
+" after the graduation. He loves writing tests and cares about code "
+"maintainability. His hobbies are open source and traveling."
+msgstr ""
+"Dmitry je šéfom technológií v kiwi.com v Prahe. S Pythonom začal v 2010 "
+"ako hobby počas štúdia na univerzite, neskôr po skončení školy pokračoval "
+"ako fulltime developer. Miluje písanie testov a dbá na udržateľnosť kódu. "
+"Jeho hobby sú open source a cestovanie."
+
+#: templates/speakers.html:374
+msgid "Testing network interactions in Python"
+msgstr ""
+
+#: templates/speakers.html:375
+msgid ""
+"Many modern Python applications interact with 3rd parties over network "
+"and packages like requests and aiohttp are incredibly popular nowadays. "
+"It makes it essential to know how to test network interactions. It is "
+"particularly important for microservices - to connect them you need to do"
+" network calls."
+msgstr ""
+
+#: templates/speakers.html:379
+msgid ""
+"This talk will walk from most straightforward ad-hoc solutions to more "
+"tunable and extensible ones. You’ll learn how to approach testing network"
+" on different isolation levels in sync and async code, take away ideas "
+"and practices how to use with popular Python tools like responses, pook, "
+"VCR, and pytest."
+msgstr ""
+
+#: templates/speakers.html:409
+msgid ""
+"I’m passionate cloud technology enthusiast. For the first time I came "
+"across clouds at University when I was choosing my master’s thesis. My "
+"route began with open-source Openstack. After studies, I’ve started "
+"working at Davinci software as cloud specialist where I gained most of my"
+" knowledge about Amazon web services (AWS). For last four years my daily "
+"routine is architecture, implementation, maintenance, deployments, "
+"automation… of infrastructure and applications from development to "
+"production environments. I’m a collector of various AWS certifications "
+"and hobby Python developer. From time to time you can meet me at "
+"University of Zilina where I lecture about cloud technologies. You can "
+"also meet me at Conservatory of Zilina with the guitar in my hand."
+msgstr ""
+"Som nadšencom cloudových technológií. S cloudom som sa prvýkrát stretol "
+"počas štúdií, keď som si vyberal tému diplomovej práce. Moja cesta začala "
+"s opensourcovým Openstackom. Po štúdiu som pracoval ako cloudový špecialista "
+"v Davinci software, kde som získal väčšinu svojich znalostí o Amazon web "
+"services (AWS). Posledné štyri roky je mojou dennou rutinou architektuúra, "
+"implementácia, údržba, nasadzovanie, automatizácia… infraštruktúry a "
+"aplikácií od vývojových až po produkčné prostredia. Zbieram rôzne AWS "
+"certifikáty a som hobby Pythonista. Z času na čas ma môžete stretnúť na "
+"Žilinskej univerzite, kde prednášam o cloudových technológiách. Stretnúť "
+"ma tiež môžete na žilinskom konzervatóriu s gitarou v ruke."
+
+#: templates/speakers.html:419
+msgid ""
+"If you want to know more about possibilities of Amazon web services or "
+"just want to casually talk about cloud technology don’t hesitate to stop "
+"me anytime and ask."
+msgstr ""
+"Ak chcete vedieť viac o možnostiach Amazon web services alebo sa chcete len "
+"porozprávať o cloudových technologiách, neváhajte ma kedykoľvek zastaviť "
+"a spýtať sa."
+
+#: templates/speakers.html:425
+msgid "Amazon Web Services - Alexa skills"
+msgstr ""
+
+#: templates/speakers.html:426
+msgid ""
+"Alexa is Amazon’s cloud base voice service that provides natural voice "
+"experience to end users. This opens a way to use human voice as "
+"input/output for you applications. You can easily create voice-controlled"
+" applications (called Alexa skills) or just voice interface for your "
+"current products or anything you like! Tools provided by Amazon web "
+"services (AWS) are easy to use and if used correctly, then completely "
+"free. Once skill is done, it’s just a matter of minutes to deploy it as "
+"high-available, auto-scaled, serverless, globally distributed application"
+" using AWS. Then you can use Amazon Alexa Skill store to sell your "
+"product all over the world. I would like to show you how it works, what "
+"AWS provides to developers and how can anybody create Alexa skills using "
+"your favorite language – Python."
+msgstr ""
+
+#: templates/speakers.html:464
+msgid ""
+"Born in Czechoslovakia, studied in France, living in Germany. Using "
+"Python to make the sun shine and the wind blow. Imports from pandas and "
+"asyncio, enjoys discovering the chaotic world of unicode and time zones."
+msgstr ""
+"Narodený v Československu, študoval vo Francúzsku, žije v Nemecku. Python "
+"používa, aby svietilo slnko a fúkal vietor. Importuje z pandas a asyncio, "
+"rád objavuje chaotický svet unicodu a časových pásiem."
+
+#: templates/speakers.html:470
+msgid "A Day Has Only 24±1 Hours"
+msgstr ""
+
+#: templates/speakers.html:471
+msgid ""
+"Not only will the Sunday in the week after this PyCon.SK 2019 be one hour"
+" shorter, but also it may steal you even more sleep because of all your "
+"Python code that has to work smoothly during daylight saving time changes"
+" or otherwise manipulate time zones. While correct working with datetime "
+"objects and offsets can be mastered, you have no control of the "
+"information on local time zones. Exclusive domain of geographers one "
+"hundred years ago, the time zones adjustments became a toy in the hands "
+"of governments all around the world."
+msgstr ""
+
+#: templates/speakers.html:479
+msgid ""
+"After a short overview of Pythons datetime and pytz libraries youll "
+"learnhow the information on time zone changes gets into your system. Well"
+" fly quickly around the worlds over five hundred time zones, but will "
+"also focus on the case of Slovakia and surrounding countries. Two "
+"centuries of propaganda and chaos in thirty minutes. Maybe that will make"
+" you want to avoid time zones in your code altogether!"
 msgstr ""
 
 #: templates/sponsoring.html:8 templates/sponsoring.html:18
