--- a/messages.pot
+++ b/messages.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2019-02-03 19:27+0100\n"
+"POT-Creation-Date: 2019-02-04 10:45+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -1450,6 +1450,10 @@ msgstr ""
 msgid "Senior Software Architect"
 msgstr ""
 
+#: templates/index.html:448
+msgid "Software Engineer"
+msgstr ""
+
 #: templates/job-fair.html:8
 msgid "Job fair"
 msgstr ""
@@ -2237,6 +2241,41 @@ msgid ""
 "also focus on the case of Slovakia and surrounding countries. Two "
 "centuries of propaganda and chaos in thirty minutes. Maybe that will make"
 " you want to avoid time zones in your code altogether!"
+msgstr ""
+
+#: templates/speakers.html:502
+msgid "Software Engineer at Yelp"
+msgstr ""
+
+#: templates/speakers.html:511
+msgid ""
+"Currently software engineer at Yelp. Speaks at Python conferences and "
+"advocates about open source. Previously managed PyData Delhi conference "
+"series, and built a community of 5000+ people."
+msgstr ""
+
+#: templates/speakers.html:517
+msgid "Gotchas and landmines in Python"
+msgstr ""
+
+#: templates/speakers.html:518
+msgid ""
+"Python may be one of the simplest and most flexible programming languages"
+" out there, but it is still a programming language. It still has syntax, "
+"datatypes, and some occasional dark corners. Python “warts” are things "
+"for which people have criticised Python, typically aspects of the "
+"language or mechanisms of its implementation, because such aspects either"
+" expose certain surprising inconsistencies, are regarded as omissions, or"
+" cause irritation for parts of the community in some sense.  This talk "
+"will be about common pitfalls (termed warts/landmines) that people face "
+"using Python programming language."
+msgstr ""
+
+#: templates/speakers.html:528
+msgid ""
+"The only pre-requisite is a basic familiarity with Python programming "
+"language. Although it’ll be good that you have laptops with Python "
+"already setup, it’s not required as such !"
 msgstr ""
 
 #: templates/sponsoring.html:8 templates/sponsoring.html:18
