fixed twitter link for Manoj Pandey

--- a/translations/sk/LC_MESSAGES/messages.po
+++ b/translations/sk/LC_MESSAGES/messages.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2019-02-04 10:45+0100\n"
+"POT-Creation-Date: 2019-02-04 11:07+0100\n"
 "PO-Revision-Date: 2018-11-27 22:00+0200\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language: sk\n"
@@ -2701,8 +2701,8 @@ msgid ""
 msgstr ""
 "Manoj pracuje aktuálne ako softvérový inžinier v Yelpe. Prednáša na "
 "Pythonských konferenciách a obhajuje otvorený softvér. V minulosti "
-"spoluorganizoval sériu konferencií PyData Delhi a vybudoval komunitu "
-"o veľkosti viac ako 5000 ľudí."
+"spoluorganizoval sériu konferencií PyData Delhi a vybudoval komunitu o "
+"veľkosti viac ako 5000 ľudí."
 
 #: templates/speakers.html:517
 msgid "Gotchas and landmines in Python"
