--- a/messages.pot
+++ b/messages.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2019-02-18 00:02+0100\n"
+"POT-Creation-Date: 2019-02-18 12:24+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -1492,6 +1492,10 @@ msgstr ""
 msgid "Software Engineer and FOSS maintainer"
 msgstr ""
 
+#: templates/index.html:518 templates/speakers.html:742
+msgid "Python loving research assistant"
+msgstr ""
+
 #: templates/job-fair.html:8
 msgid "Job fair"
 msgstr ""
@@ -2105,18 +2109,18 @@ msgstr ""
 msgid ""
 "Building for the modern web is complicated and error-prone: a typical web"
 " app requires five different languages and four or five frameworks just "
-"to get started. Wouldnt it be nicer if we could do it all in Python? With"
-" Anvil, you can design your page visually, write your browser-side and "
-"server-side code in pure Python, and even set up a built-in database in "
-"seconds. In this talk, Meredydd will walk us through how Anvil works "
+"to get started. Wouldn't it be nicer if we could do it all in Python? "
+"With Anvil, you can design your page visually, write your browser-side "
+"and server-side code in pure Python, and even set up a built-in database "
+"in seconds. In this talk, Meredydd will walk us through how Anvil works "
 "under the bonnet, and the challenges of building a programming system "
-"thats easy to use without sacrificing power."
+"that's easy to use without sacrificing power."
 msgstr ""
 
 #: templates/speakers.html:281
 msgid ""
 "Shaun started programming in earnest by simulating burning fusion plasmas"
-" in the worlds biggest laser system. He fell in love with Python as a "
+" in the world's biggest laser system. He fell in love with Python as a "
 "data analysis tool, and has never looked back. Now he wants to turn "
 "everything into Python, which is why he works for Anvil."
 msgstr ""
@@ -2130,19 +2134,19 @@ msgid ""
 "Anvil is a platform for rapidly developing web apps using nothing but "
 "Python.\n"
 "\n"
-"Its like Visual Basic for the web. It has a drag-and-drop editor for "
+"It's like Visual Basic for the web. It has a drag-and-drop editor for "
 "constructing a user interface, controlled by Python code in both the "
 "client and a hosted server environment.\n"
 "\n"
-"This is an interactive workshop where youll be guided through creating an"
-" app. Either:\n"
+"This is an interactive workshop where you'll be guided through creating "
+"an app. Either:\n"
 "* A TODO list - a simple example of a Create, Read, Update, Delete (CRUD)"
 " app\n"
 "* A weather data dashboard\n"
 "* An app that controls a remote machine from the web\n"
 "* Any other idea you might have!\n"
 "\n"
-"Youll need a laptop to follow along.\n"
+"You'll need a laptop to follow along.\n"
 "\n"
 "For a preview, have a look at this short video https://anvil.works/#about"
 msgstr ""
@@ -2335,7 +2339,7 @@ msgid ""
 msgstr ""
 
 #: templates/speakers.html:570
-msgid "I Dont Care About Security (And Neither Should You)"
+msgid "I Don't Care About Security (And Neither Should You)"
 msgstr ""
 
 #: templates/speakers.html:571
@@ -2477,6 +2481,60 @@ msgstr ""
 
 #: templates/speakers.html:721
 msgid "Concluding ideas."
+msgstr ""
+
+#: templates/speakers.html:751
+msgid ""
+"Mridul is trying to understand the world around us using data and tools "
+"from network science, currently at UCLouvain. He is an open source "
+"enthusiast and has been involved with Google Summer of Code and NumFOCUS."
+" He has given multiple tutorials at PyCon, PyData, and EuroScipy to share"
+" his love of Python and network science."
+msgstr ""
+
+#: templates/speakers.html:759
+msgid "Network Science, Game of Thrones and US Airports"
+msgstr ""
+
+#: templates/speakers.html:760
+msgid ""
+"This tutorial will introduce the basics of network theory and working "
+"with graphs/networks using python and the NetworkX package. This will be "
+"a hands on tutorial and will require writing a lot of code snippets. The "
+"participants should be comfortable with basic python (loops, "
+"dictionaries, lists) and some(minimal) experience with working inside a "
+"jupyter notebook. Broadly the tutorial is divided into three parts:"
+msgstr ""
+
+#: templates/speakers.html:768
+msgid ""
+"Part A (20 mins) - Basics of graph theory, NetworkX and various examples "
+"of networks in real life."
+msgstr ""
+
+#: templates/speakers.html:769
+msgid ""
+"Part B (35 mins) - Study the Game of Thrones network and find important "
+"characters and communities in the network."
+msgstr ""
+
+#: templates/speakers.html:770
+msgid ""
+"Part C (35 mins) - Analyze the structure of the US Airport dataset and "
+"look at the temporal evolution of the network from 1990 to 2015."
+msgstr ""
+
+#: templates/speakers.html:771
+msgid ""
+"By the end of the tutorial everyone should be comfortable with hacking on"
+" the NetworkX API, modelling data as networks and basic analysis on "
+"networks using python."
+msgstr ""
+
+#: templates/speakers.html:774
+msgid ""
+"The tutorial and the datasets is available on GitHub at: "
+"https://github.com/MridulS/pydata-networkx"
 msgstr ""
 
 #: templates/sponsoring.html:8 templates/sponsoring.html:18
