--- a/translations/sk/LC_MESSAGES/messages.po
+++ b/translations/sk/LC_MESSAGES/messages.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2019-02-20 23:08+0100\n"
+"POT-Creation-Date: 2019-02-20 23:50+0100\n"
 "PO-Revision-Date: 2018-11-27 22:00+0200\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language: sk\n"
@@ -1758,8 +1758,8 @@ msgid "Python enthusiast and security evangelist"
 msgstr "Python nadšenec a bezpečnostný evanjelista"
 
 #: templates/index.html:498 templates/speakers.html:647
-msgid "Odoo evangelist"
-msgstr "Odoo evanjelista"
+msgid "Odoo evangelist in IMPLEMENTO"
+msgstr "Odoo evanjelista v IMPLEMENTO"
 
 #: templates/index.html:508 templates/speakers.html:689
 msgid "Chief Innovation Officer"
@@ -2914,9 +2914,9 @@ msgid ""
 "Petra decided to try to work for self governance. She works as Chief "
 "Innovation Officer in City of Bratislava."
 msgstr ""
-"Petra sa rozhodla vyskúšať život v samospráve a od januára pôsobí v meste "
-"Bratislava ako Chief Innovation Officer, po slovensky Splnomocnenkyňa pre "
-"inovácie."
+"Petra sa rozhodla vyskúšať život v samospráve a od januára pôsobí v meste"
+" Bratislava ako Chief Innovation Officer, po slovensky Splnomocnenkyňa "
+"pre inovácie."
 
 #: templates/speakers.html:699
 msgid ""
@@ -2931,17 +2931,17 @@ msgid ""
 "has experienced startup world in Freya project. She is a co-author of "
 "entrepreneurship and innovations of Plan Bratislava."
 msgstr ""
-"Petra stála pri zrode Slovenskej aliancie pre inovatívnu ekonomiku(SAPIE), "
-"ktorá je dnes kľúčovým zástupcom technologických firiem na domácej aj "
-"medzinárodnej scéne s viac ako 80 členmi. V SAPIE bola spoluautorkou "
-"expertných dokumentov o startup ekosystéme, analýze a spôsoboch podpory "
-"rýchlorastúcich firiem a spôsoboch ako efektívne implementovať Jednotný "
-"Digitálny trh v EÚ a na Slovensku. Po vysokej škole pôsobila tri roky v "
-"Austálii v Royal Institution of Australia, ktorej cieľom bolo predstaviť "
-"vedecké a technické znalosti širokej verejnosti. Počas svojej kariéry si "
-"vyskúšala aj startupový svet na vlastnej koži s projektom Freya. Je "
-"spoluautorkou kapitoly o podnikaní a inováciách Plánu Bratislava."
-
+"Petra stála pri zrode Slovenskej aliancie pre inovatívnu "
+"ekonomiku(SAPIE), ktorá je dnes kľúčovým zástupcom technologických firiem"
+" na domácej aj medzinárodnej scéne s viac ako 80 členmi. V SAPIE bola "
+"spoluautorkou expertných dokumentov o startup ekosystéme, analýze a "
+"spôsoboch podpory rýchlorastúcich firiem a spôsoboch ako efektívne "
+"implementovať Jednotný Digitálny trh v EÚ a na Slovensku. Po vysokej "
+"škole pôsobila tri roky v Austálii v Royal Institution of Australia, "
+"ktorej cieľom bolo predstaviť vedecké a technické znalosti širokej "
+"verejnosti. Počas svojej kariéry si vyskúšala aj startupový svet na "
+"vlastnej koži s projektom Freya. Je spoluautorkou kapitoly o podnikaní a "
+"inováciách Plánu Bratislava."
 
 #: templates/speakers.html:711
 msgid "Inovácie v meste Bratislava"
@@ -3231,13 +3231,13 @@ msgid ""
 "creation and overall improvement of user interface in library's systems "
 "and services."
 msgstr ""
-"Světlana pracuje jako UX designér + markeťák v Knihovně Univerzity Tomáše "
-"Bati ve Zlíně. Má PhD. z Univerzity Komenského v Bratislavě (obor "
+"Světlana pracuje jako UX designér + markeťák v Knihovně Univerzity Tomáše"
+" Bati ve Zlíně. Má PhD. z Univerzity Komenského v Bratislavě (obor "
 "knižničná a informačná veda), její dizertačka se věnovala testování "
-"použitelnosti mobilních webových sídel v prostředí knihoven. V univerzitní "
-"knihovně má na starosti (kromě různých marketingových aktivit a "
-"propagace) návrh, tvorbu a celkové zlepšování uživatelských rozhraní "
-"u systémů a webových služeb knihovny."
+"použitelnosti mobilních webových sídel v prostředí knihoven. V "
+"univerzitní knihovně má na starosti (kromě různých marketingových aktivit"
+" a propagace) návrh, tvorbu a celkové zlepšování uživatelských rozhraní u"
+" systémů a webových služeb knihovny."
 
 #: templates/speakers.html:1065
 msgid "Nenuťte uživatele přemýšlet"
@@ -4030,4 +4030,7 @@ msgstr ""
 #~ " DS/ML/AI Team, tools available and "
 #~ "how you can start with it."
 #~ msgstr ""
+
+#~ msgid "Odoo evangelist"
+#~ msgstr "Odoo evanjelista"
 
