--- a/translations/sk/LC_MESSAGES/messages.po
+++ b/translations/sk/LC_MESSAGES/messages.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2019-02-23 09:19+0100\n"
+"POT-Creation-Date: 2019-02-23 09:47+0100\n"
 "PO-Revision-Date: 2018-11-27 22:00+0200\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language: sk\n"
@@ -1843,7 +1843,7 @@ msgstr "Technický spíker v Mozille"
 msgid "Python backend developer"
 msgstr "Python backend developer"
 
-#: templates/index.html:737
+#: templates/index.html:737 templates/speakers.html:1623
 msgid "SysAdmin Team Lead at Exponea"
 msgstr "SysAdmin Team Lead v Exponea"
 
@@ -3630,8 +3630,8 @@ msgid ""
 "even better. I am always keen to share my knowledge and learn from "
 "others."
 msgstr ""
-"Python vývojár v Kiwi.com zameraný na finančné aplikácie. Som developer,"
-" ktorý rád rozbíja veci a potom ich dáva dohromady, aby fungovali ešte "
+"Python vývojár v Kiwi.com zameraný na finančné aplikácie. Som developer, "
+"ktorý rád rozbíja veci a potom ich dáva dohromady, aby fungovali ešte "
 "lepšie. Vždy sa rád podelím o svoje znalosti a poučím sa od ostatných."
 
 #: templates/speakers.html:1497
@@ -3692,8 +3692,8 @@ msgid ""
 "Day, Hacker by Night»"
 msgstr ""
 "Kalyan Dikshit je technický spíker z Mozilly, predstaviteľ a člen "
-"hyderabadskej komunity v Indii. Prednášal na Internet Freedom Festivale "
-"v rokoch 2017 a 2018, Still Hacking Anyway (SHA), All Systems Go! 2017, "
+"hyderabadskej komunity v Indii. Prednášal na Internet Freedom Festivale v"
+" rokoch 2017 a 2018, Still Hacking Anyway (SHA), All Systems Go! 2017, "
 "Shift DEV 2018. Nedávno prednášal na “Full Stack Fest 2018” v Barcelone. "
 "Ako dobrovoľník lokalizoval softvér pre Mozillu, Tor, Orfox, Orbot, "
 "GlobaLeaks, Briar a OONIProbe. Aktuálne venuje svoj čas do ICRISAT, kde "
@@ -3720,8 +3720,8 @@ msgid ""
 "deployment on production. Big fan and evangelist of continuous learning, "
 "organizer of coding dojo sessions."
 msgstr ""
-"Developer s 10-ročnými skúsenosťami s backend systémami. Vytváral ich "
-"na zelenej lúke od analýzy a písanie špecifikácií až po nasadenie do "
+"Developer s 10-ročnými skúsenosťami s backend systémami. Vytváral ich na "
+"zelenej lúke od analýzy a písanie špecifikácií až po nasadenie do "
 "produkcie. Veľký fanúšik a evanjelista neustáleho učenia, organizátor "
 "Coding dojo stretnutí."
 
@@ -3739,6 +3739,30 @@ msgid ""
 "and misconceptions and hopefully give you some ideas you could use for "
 "your own project regardless of its size. With a bit of work some/all "
 "could be applied to legacy projects as well."
+msgstr ""
+
+#: templates/speakers.html:1632
+msgid ""
+"Working at Exponea for two years already taught me two main things. "
+"Large scale systems deployed across several locations are awesome. "
+"Automation of such systems is even more awesome. "
+msgstr ""
+"Dva roky práce v Exponea ma naučili dve základné veci. Veľké systémy "
+"nasadené naprieč niekoľkými lokalitami sú skvelé. Automatizácia takýchto"
+" systémov je ešte viac skvelá. "
+
+#: templates/speakers.html:1638
+msgid "We run huge in-memory databases in GKE and we love it!"
+msgstr ""
+
+#: templates/speakers.html:1639
+msgid ""
+"We invite You on the talk about our largest scale change in history of "
+"Exponea. We'll show you how we managed to run multi-terrabyte sharded in-"
+"memory DBs in the environment of ephemeral containers, hundreds of python"
+" and go workers in multiple kubernetes namespaces and several hundred VMs"
+" in google cloud. You don't want to miss our way of automating this "
+"system too."
 msgstr ""
 
 #: templates/sponsoring.html:8 templates/sponsoring.html:18
